# configurator

./: LICENSE  README.md  configurator.py  pyproject.toml
test/: cfg.toml  test_config.py  test_decode.py
